assets/styles/variables.scss
@font-face {
  font-family: JetBrainsMono-Regular;
  src: url("./JetBrainsMono-Regular.woff2") format("woff2");
  font-weight: 600;
  font-style: normal;
}

:root {
  --bs-font-monospace: JetBrainsMono-Regular, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
}

html {
  --main-bg-color: #fff;
  --navbar-bg-color: #2d333b;
  --font-color: #212529;
  --link-color: #000;
  --regular-link-color: #2e2eff;
  --page-heading-bg-color: #f6f8fa;
  --nav-link-color: #6a737d;
  --nav-active-link-color: #1b1f23;
  --footer-color: #4f545a;
  --footer-bg-color: #f6f8fa;
  --border-color: #d0d7de;
  --pg-active-color: #fff;
  --code-color: #333;
  --code-bg-color: #f7f8fa;
  --code-inline-bg-color: #afb8c133;
  --avatar-bg-color: #fff;
  --alert-success-color: #0f5132;
  --alert-success-bg-color: #d1e7dd;
  --alert-success-border-color: #badbcc;
  --badge-bg-color: #6c757d;
  --pg-color: #212529;
  --color-primer-border-active: #ec775c;
  --scrollbar-track-color: #fafafa;
  --scrollbar-handle-color: #c1c1c1;
  --scrollbar-handle-hover-color: #7d7d7d;

  .table {
    --bs-table-bg: rgb(0 0 0 / 0%);
    --bs-table-accent-bg: rgb(0 0 0 / 0%);
    --bs-table-striped-color: #212529;
    --bs-table-striped-bg: rgb(0 0 0 / 5%);
    --bs-table-active-color: #212529;
    --bs-table-active-bg: rgb(0 0 0 / 10%);
    --bs-table-hover-color: #212529;
    --bs-table-hover-bg: rgb(0 0 0 / 7.5%);
  }
}

html.dark {
  --main-bg-color: #22272e;
  --page-heading-bg-color: #2d333b;
  --navbar-bg-color: #2d333b;
  --font-color: #acbac7;
  --link-color: #acbac7;
  --regular-link-color: #549bf5;
  --nav-link-color: white;
  --nav-active-link-color: white;
  --footer-color: #f5f5f5;
  --footer-bg-color: #2d333b;
  --border-color: #3d3d3d;
  --code-color: #acbac7;
  --code-bg-color: #2d333b;
  --code-inline-bg-color: #3c434d;
  --alert-success-color: #fff;
  --alert-success-bg-color: #58a6ff;
  --alert-success-border-color: #07693c;
  --badge-bg-color: #424b5f;
  --pg-color: #acb2b8;
  --scrollbar-track-color: #2b2b2b;
  --scrollbar-handle-color: #6b6b6b;
  --scrollbar-handle-hover-color: #939393;

  .btn-close {
    filter: invert(1) grayscale(100%) brightness(200%);
  }

  .table {
    --bs-table-bg: #2d333b;
    --bs-table-striped-bg: #22272e;
    --bs-table-striped-color: #fff;
    --bs-table-active-bg: #373b3e;
    --bs-table-active-color: #fff;
    --bs-table-hover-bg: #323539;
    --bs-table-hover-color: #fff;

    color: #fff;
    border-color: #373b3e;
  }

  .card {
    --bs-card-bg: var(--main-bg-color);
    --bs-card-cap-bg: var(--page-heading-bg-color);
    --bs-card-color: var(--font-color);
    --bs-card-cap-color: var(--font-color);
    --bs-card-border-color: var(--border-color);
  }

  .dropdown-menu {
    --bs-dropdown-color: #acbac7;
    --bs-dropdown-bg: #2d333b;
    --bs-dropdown-link-color: #acbac7;
    --bs-dropdown-link-hover-color: #fff;
    --bs-dropdown-link-hover-bg: #6c757d;
    --bs-dropdown-link-active-color: #fff;
    --bs-dropdown-link-active-bg: #0d6efd;
    --bs-dropdown-link-disabled-color: #72777c;
  }
}

